--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,9 +38,15 @@
 
     <!-- Outlined button -->
     <style name="OuiOui.Button.Outlined" parent="Widget.Material3.Button.OutlinedButton">
-        <item name="android:textColor">@color/primary</item>
-        <item name="strokeColor">@color/primary</item>
-        <item name="shapeAppearance">@style/Shape.Corner.Rounded8</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="strokeColor">@color/lightGray</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="cornerRadius">50dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="elevation">2dp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 
     <!-- Rounded‐corner shape -->
