--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Primary Colors -->
     <color name="primary">#FF6B35</color>
     <color name="primary_variant">#E55A2B</color>
@@ -34,5 +34,9 @@
     <!-- Generic Colors -->
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="veryLightGray">#FBFBFB</color>
     <color name="lightGray">#F5F5F5</color>
+    <color name="darkGray">#424242</color>
+    <color name="gray">#9E9E9E</color>
+    <color name="blue">#2196F3</color>
 </resources>
