--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,7 +34,7 @@
     <!-- Generic Colors -->
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="veryLightGray">#FBFBFB</color>
+    <color name="veryLightGray">#FAFAFA</color>
     <color name="lightGray">#F5F5F5</color>
     <color name="darkGray">#424242</color>
     <color name="gray">#9E9E9E</color>
