--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,6 +21,12 @@
     </fragment>
 
     <fragment
+        android:id="@+id/savedFragment"
+        android:name="com.sharks.ouioui.ui.saved.SavedFragment"
+        tools:layout="@layout/fragment_saved">
+    </fragment>
+
+    <fragment
         android:id="@+id/settingsFragment"
         android:name="com.sharks.ouioui.ui.settings.SettingsFragment"
         tools:layout="@layout/fragment_settings">
