--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Primary Colors -->
+<resources>
+    <!-- Primary brand -->
     <color name="primary">#FF6B35</color>
     <color name="primary_variant">#E55A2B</color>
+
+    <!-- Secondary brand -->
     <color name="secondary">#03DAC6</color>
     <color name="secondary_variant">#018786</color>
 
-    <!-- Background Colors -->
+    <!-- Canvas & surfaces (light defaults) -->
     <color name="background_light">#FFFFFF</color>
-    <color name="background_dark">#121212</color>
     <color name="surface_light">#FFFFFF</color>
+
+    <!-- Text on canvas & surfaces (light) -->
+    <color name="text_primary_light">#212121</color>
+    <color name="text_secondary_light">#757575</color>
+
+    <!-- Canvas & surfaces (dark fallbacks, used by themes in values-night) -->
+    <color name="background_dark">#121212</color>
     <color name="surface_dark">#1E1E1E</color>
 
-    <!-- Text Colors -->
-    <color name="text_primary_light">#212121</color>
+    <!-- Text on canvas & surfaces (dark fallbacks) -->
     <color name="text_primary_dark">#FFFFFF</color>
-    <color name="text_secondary_light">#757575</color>
     <color name="text_secondary_dark">#AAAAAA</color>
 
-    <!-- Card Colors -->
+    <!-- Cards -->
     <color name="card_background_light">#FFFFFF</color>
     <color name="card_background_dark">#2D2D2D</color>
-
-    <!-- Rating Colors -->
-    <color name="rating_star">#FFD700</color>
-    <color name="rating_empty">#E0E0E0</color>
 
     <!-- Status Colors -->
     <color name="success">#4CAF50</color>
@@ -39,4 +41,6 @@
     <color name="darkGray">#424242</color>
     <color name="gray">#9E9E9E</color>
     <color name="blue">#2196F3</color>
+
+
 </resources>
