--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?android:attr/colorBackground"
     android:id="@+id/settings_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -38,7 +39,8 @@
                     android:id="@+id/ivDarkMode"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/ic_dark_mode" />
+                    android:src="@drawable/ic_dark_mode"
+                    app:tint="?attr/colorOnSurface"/>
 
                 <TextView
                     android:layout_width="0dp"
@@ -161,7 +163,8 @@
                         android:id="@+id/ivInfo"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:src="@drawable/ic_info" />
+                        android:src="@drawable/ic_info"
+                        app:tint="?attr/colorOnSurface" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -189,7 +192,8 @@
                         android:id="@+id/ivStar"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:src="@drawable/ic_star" />
+                        android:src="@drawable/ic_star"
+                        app:tint="?attr/colorOnSurface" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -217,7 +221,8 @@
                         android:id="@+id/ivLanguage"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:src="@drawable/ic_language" />
+                        android:src="@drawable/ic_language"
+                        app:tint="?attr/colorOnSurface" />
 
                     <TextView
                         android:layout_width="0dp"
